<?xml version="1.0"?>
<package format="2">
  <name>seed_sample</name>
  <version>0.0.0</version>
  <description>The seed_sample package</description>

  <maintainer email="y.shiigi@thk.co.jp">Yasuto Shiigi</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>seed_smartactuator_sdk</depend>
  <depend>message_generation</depend>

</package>
